add some region

--- a/themes/custom/premiumlayers/premiumlayers.info.yml
+++ b/themes/custom/premiumlayers/premiumlayers.info.yml
@@ -15,6 +15,11 @@ regions:
   header_slider_text_1: 'Header Slider Text 1'
   header_slider_text_2: 'Header Slider Text 2'
   header_slider_text_3: 'Header Slider Text 3'
+  widget_1: 'widget 1'
+  widget_2: 'widget 2'
+  widget_3: 'widget 3'
+  widget_4_half_a: 'widget 4 half a'
+  widget_4_half_b: 'widget 4 half b'
   footer: 'footer'
   sidebar: 'sidebar'
   header_icon: 'Header Icon'
