--- a/themes/custom/premiumlayers/premiumlayers.info.yml
+++ b/themes/custom/premiumlayers/premiumlayers.info.yml
@@ -16,11 +16,16 @@ regions:
   header_slider_text_2: 'Header Slider Text 2'
   header_slider_text_3: 'Header Slider Text 3'
   widget_1: 'widget 1'
-  widget_2: 'widget 2'
-  widget_3: 'widget 3'
-  widget_4_half_a: 'widget 4 half a'
-  widget_4_half_b: 'widget 4 half b'
+  widget_1_half: 'widget 1 half '
   footer: 'footer'
+  footer_web_info: 'footer web info'
+  footer_contact_address: 'footer contact address'
+  footer_contact_telephone: 'footer contact telephone'
+  footer_contact_email: 'footer contact email'
+  social_link_facebook: 'social link facebook'
+  social_link_twitter: 'social link twitter'
+  social_link_google: 'social link facebook'
+  social_link_linkedin: 'social link facebook'
   sidebar: 'sidebar'
   header_icon: 'Header Icon'
   header_add: 'Header Add'
