--- a/themes/custom/premiumlayers/premiumlayers.info.yml
+++ b/themes/custom/premiumlayers/premiumlayers.info.yml
@@ -19,13 +19,17 @@ regions:
   widget_1_half: 'widget 1 half '
   footer: 'footer'
   footer_web_info: 'footer web info'
+  footer_web_logo: 'footer web logo'
   footer_contact_address: 'footer contact address'
   footer_contact_telephone: 'footer contact telephone'
   footer_contact_email: 'footer contact email'
   social_link_facebook: 'social link facebook'
   social_link_twitter: 'social link twitter'
-  social_link_google: 'social link facebook'
-  social_link_linkedin: 'social link facebook'
+  social_link_google: 'social link google plus'
+  social_link_linkedin: 'social link linkedin'
+  footer_latest_post: 'footer latest post'
+  footer_video: 'footer video of the day'
+  footer_tags: 'footer tags'
   sidebar: 'sidebar'
   header_icon: 'Header Icon'
   header_add: 'Header Add'
